# monoids

./: monoid_homomorphisms.hs  monoids.cabal  monoids_in_practice.hs
app/: Main.hs
src/: FrequentWords.hs  Identity.hs  MaybeMonoidalValidation.hs  MonoidHomomorphisms.hs  MonoidalChar.hs  MonoidalValidation.hs  MonoidsInPractice.hs  NonAssociativeOps.hs  monoids.hs  monoids_in_practice.hs
