name:                monoids
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/batou99/monoids#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Category Theory
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MonoidsInPractice
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable monoids-in-practice-exe
  hs-source-dirs:      src
  main-is:             MonoidsInPractice.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidsInPractice
  build-depends:       base
                     , monoids
  default-language:    Haskell2010

executable frequent-words-exe
  hs-source-dirs:      src
  main-is:             FrequentWords.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is FrequentWords
  build-depends:       base
                     , monoids
                     , containers
                     , criterion
  default-language:    Haskell2010

executable monoidal-char-exe
  hs-source-dirs:      src
  main-is:             MonoidalChar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidalChar
  build-depends:       base
                     , monoids
  default-language:    Haskell2010

executable monoid-homomorphisms-exe
  hs-source-dirs:      src
  main-is:             MonoidHomomorphisms.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is MonoidHomomorphisms
  build-depends:       base
                     , monoids
                     , criterion
  default-language:    Haskell2010

executable validation-exe
  hs-source-dirs:      src
  main-is:             Validation.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Validation
  build-depends:       base
                     , monoids
  default-language:    Haskell2010

test-suite monoids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monoids
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/batou99/monoids
